openshift/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradesa-app
spec:
  selector:
    matchLabels:
      app: gradesa-app
  template:
    metadata:
      labels:
        app: gradesa-app
    spec:
      containers:
      - name: app
        image: image-registry.openshift-image-registry.svc:5000/gradesa-project/gradesa-app:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
