openshift/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradesa-app
spec:
  selector:
    app: gradesa-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
